fix overflow stretch test

--- a/main.scss
+++ b/main.scss
@@ -18,10 +18,6 @@ html {
   box-sizing: inherit;
 }
 
-body {
-  overflow: hidden;
-}
-
 //Header
 
 header {
